Fixing layout issues

--- a/declarations_site/catalog/static/sass/_base.scss
+++ b/declarations_site/catalog/static/sass/_base.scss
@@ -788,6 +788,13 @@ ol.social-list > li {
     }
 }
 
+.decl-item .translated-link {
+    position: absolute;
+    bottom: 5px;
+    float: none;
+    font-size: 13px;
+}
+
 .search-results .add2compare-list,
 .decl-compare-modal .add2compare-list {
     position: absolute;
